Updated the proptypes, the UI, and added code to make sure the frontend can be hosted on heroku

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>myFlix</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Josefin+Sans:600|Monoton&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
